prevent name entry cutoff

--- a/src/features/meeting-name-entry/meeting-name-entry.css
+++ b/src/features/meeting-name-entry/meeting-name-entry.css
@@ -1,6 +1,7 @@
 .wrapper {
     background: rgba(255, 255, 255, 0.7);
     display: flex;
+    flex-shrink: 0;
     padding: 10px 20px;
     width: 100%;
 }
